--- a/index.html
+++ b/index.html
@@ -5,7 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
 </head>
+
 <body>
+    <header>
+        <h1>Hello World</h1>
+        <p>Que bom te ver por aqui, Fulano!</p>
+
+    </header>
+
+    <section>
+        <h2>HTML</h2>
+        <P>HypertextMarkup Language (em português Linguagem de marcação de Hipertexto) estrutura a sua página web. </P>
+      
+        <h2>CSS</h2>
+
+        <P>Cascading Style Sheets(em português, Folha de Estilo em Cascata) estiliza sua página web.</P>
+
+        <img src="imagem/olámundo.png.png" alt="magem com figuras geométricas ao fundo e uma figura do planeta Terraa frente, com a inscrição Olá Mundo em letras coloridas ">
+
+    </section>
+
+    <footer>
+<P>Uma página desenvolvida por Alura Start</P>
+
+    </footer>
     
 </body>
 </html>
