Construção do main

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
     <link rel="stylesheet" href="style.css"> 
+   
 </head>
 
 <body>
     <header>
         <h1>Hello World</h1>
-        <p>Que bom te ver por aqui, <span id="nome-usuário">Fulano!</span></p>
+        <p>Que bom te ver por aqui, <span id="nome-Usuário">Fulano!</span></p>
 
     </header>
 
@@ -30,6 +31,6 @@
 <P>Uma página desenvolvida por Alura Start</P>
 
     </footer>
-    
+     <script src="maain.js"></script>
 </body>
 </html>
